--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <title>Curso Básico de Vue</title>
   </head>
   <body>
+ 
+    <div id="app">
+
+      {{msg}}
+      {{aluno.nome}}
+      {{frutas[1]}}
+      {{fun()}}
+
+      
+    </div>
+
     <div id="app">
       {{ msg }}
-      <!-- interpolacao de dados -->
-    </div>
+     interpolacao de dados 
+    </div> 
 
     <div id="app2">
       <span v-bind:title="msg2">
@@ -30,7 +41,12 @@
         el: "#app",
         data: {
           //dados que vao ser mostrados na tela
-          msg: "Hello World"
+          msg: "Hello World",
+          frutas: ['a','b'],
+          aluno: {nome: 'Paula'},
+          fun: () => {
+            return 'Alo mundo';            
+          }
         }
       });
 
@@ -48,5 +64,29 @@
         }
       });
     </script>
+
+<div id="app-5">
+  <p>{{ message }}</p>
+  <button v-on:click="reverseMessage">Inverter Mensagem</button>
+
+    <p>{{ message }}</p>
+    <input v-model="message">
+
+</div>
+
+<script>
+var app5 = new Vue({
+  el: '#app-5',
+  data: {
+    message: 'Olá Vue!'
+  },
+  methods: {
+    reverseMessage: function () {
+      this.message = this.message.split('').reverse().join('')
+    }
+  }
+})
+</script>
+
   </body>
 </html>
