--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <div id="app3">
     <p v-if="seen">Agora voce me viu</p>
+    <!-- aqui pode usar outros <p></p> com v-else-if e v-else -->
   </div>
 
 
