--- a/index3.html
+++ b/index3.html
@@ -24,7 +24,7 @@
 
         <ul>
             <li v-for="(value, key, index) in usuario">
-                {{index}} -> {{key}}: {{value}}
+                <b>{{index}} -> {{key}}: </b> {{value}}
             </li>
         </ul>
 
