--- a/2wayDataBiding.html
+++ b/2wayDataBiding.html
@@ -18,8 +18,8 @@
 
             <input type="text" v-model="textoDigitado" />
             <button v-on:click="alterarNome()">
-                <button :click="alterarNome()"> não funciona
-                    <button @click="alterarNome()"> funciona igual
+                <!-- <button :click="alterarNome()"> não funciona
+                    <button @click="alterarNome()"> funciona igual  -->
                         Chamar altera nome
                     </button>
                     <br>
