--- a/2wayDataBiding.html
+++ b/2wayDataBiding.html
@@ -15,10 +15,15 @@
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
         <div id="app">
-            <input type="text" v-model="textoDigitado" />
-            <button v-on:click="alterarNome('VAZ', $event)">
-                Add
-            </button>
+            <form> 
+                <!-- o navegador faz um "post back"
+                http://127.0.0.1:5500/2wayDataBiding.html?
+                note o ? -->
+                <input type="text" v-model="textoDigitado" />
+                <button v-on:click="alterarNome('VAZ', $event)">
+                    Add
+                </button>
+            </form>
         </div>
 
         <script>
