add estilo com event click

--- a/2wayDataBiding.html
+++ b/2wayDataBiding.html
@@ -46,7 +46,7 @@
 
                     },
                     alerta(event){
-                        alert(event.target.textContent.trim())
+                        event.target.style = "background: red"
                     }
 
                 }
