toda vez q redenrizar app, chama template

--- a/mount.html
+++ b/mount.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <button onclick="carregar()"> Chama mudança </button>
+    <!-- <button on-click="carregar()"> Chama mudança </button> -->
 
     <div id="app">
      <!-- {{message}} -->
@@ -19,12 +19,12 @@
 
     <script>
 
-        function carregar (){
-            app.$mount("#app")//onde estou motando vai carregar automaticamente o meu template
-        }
+        // function carregar (){
+        //     app.$mount("#app")//onde estou motando vai carregar automaticamente o meu template
+        // }
 
         const app = new Vue({
-           // el: '#app',
+           el: '#app',
             data: {
                 message: `Olá Vue!`
             },
